--- a/cepjs/index.html
+++ b/cepjs/index.html
@@ -23,6 +23,11 @@
         <br>
         <label for="uf">UF:</label>
         <input type="text" id="uf" maxlength="2">
+        <br>
+        <br>
+
+        <!-- Submit ativa o html as validações-->
+     <button type="submit">Enviar</button>
     </form>
     <script src="script.js"></script>
 </body>
