--- a/Atividade/index.html
+++ b/Atividade/index.html
@@ -1,109 +1,160 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
+<!DOCTYPE html> <!-- Declara o tipo de documento como HTML5 -->
+<html lang="pt-br"> <!-- Define a linguagem do conteúdo como português brasileiro -->
+ 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> <!-- Define o conjunto de caracteres como UTF-8 para suportar caracteres especiais -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Busca de Endereço por CEP</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- Configura o viewport para design responsivo -->
+    <title>Busca de Endereço por CEP</title> <!-- Define o título da página exibido na aba do navegador -->
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Link para o arquivo CSS do Bootstrap para estilização -->
 </head>
-
-<body>
-    <h2>Busca de Endereço por CEP</h2>
-    <img class="centralizar" src="img/cep.jfif" alt="cep">
-    <form>
-        <fieldset class="usuario">
-            <legend>Identificação do usuário</legend>
-            <p>
-                <label for="cnome">Nome: </label> <!-- o "for" deve ser o mesmo nome que está no "id" do input -->
-                <input type="text" name="nome" id="cnome" size="30" maxlength="50" placeholder="Nome completo" required
-                    autofocus> <!-- "required torna o preenchimento obrigatório" -->
-            </p>
-            <p>
-                <label for="cphone">Telefone:</label>
-                <input type="tel" name="telefone" id="cphone" size="15" maxlength="15" placeholder="Digite seu telefone"
-                    required oninput="mascaraTelefone(this)">
-            </p>
-            <p>
-                <label for="cemail">E-mail:</label>
-                <!-- O "label" com input do tipo email exige que tenha um @, mas não significa que seja um e-mail válido -->
-                <input type="email" name="email" id="cemail" size="30" maxlength="50" placeholder="Digite seu e-mail"
-                    required>
-            </p>
-
-            <p>
-                <label for="cnasc">Data de nascimento:</label>
-                <input type="date" name="nasc" id="cnasc">
-            </p>
-
-        </fieldset>
-
-        <fieldset class="endereco">
-            <legend>Endereço do usuário</legend>
-            <p>
-                <label for="cep">CEP:</label>
-                <input type="text" id="cep" maxlength="9" onblur="buscarEndereco()">
-            </p>
-            <p>
-                <label for="logradouro">Logradouro:</label>
-                <input type="text" id="logradouro">
-            </p>
-            <p>
-                <label for="numero">Número:</label>
-                <input type="text" id="numero">
-            </p>
-            <p>
-                <label for="complemento">Complemento:</label>
-                <input type="text" id="Complemento">
-            </p>
-            <p>
-                <label for="bairro">Bairro:</label>
-                <input type="text" id="bairro">
-            </p>
-            <p>
-                <label for="cidade">Cidade:</label>
-                <input type="text" id="cidade">
-            </p>
-            <p>
-                <label for="uf">UF:</label>
-                <select id="uf" name="uf">
-                    <option value="Selecione">Selecione</option>
-                    <option value="AC">Acre</option>
-                    <option value="AL">Alagoas</option>
-                    <option value="AP">Amapá</option>
-                    <option value="AM">Amazonas</option>
-                    <option value="BA">Bahia</option>
-                    <option value="CE">Ceará</option>
-                    <option value="DF">Distrito Federal</option>
-                    <option value="ES">Espírito Santo</option>
-                    <option value="GO">Goiás</option>
-                    <option value="MA">Maranhão</option>
-                    <option value="MT">Mato Grosso</option>
-                    <option value="MS">Mato Grosso do Sul</option>
-                    <option value="MG">Minas Gerais</option>
-                    <option value="PA">Pará</option>
-                    <option value="PB">Paraíba</option>
-                    <option value="PR">Paraná</option>
-                    <option value="PE">Pernambuco</option>
-                    <option value="PI">Piauí</option>
-                    <option value="RJ">Rio de Janeiro</option>
-                    <option value="RN">Rio Grande do Norte</option>
-                    <option value="RS">Rio Grande do Sul</option>
-                    <option value="RO">Rondônia</option>
-                    <option value="RR">Roraima</option>
-                    <option value="SC">Santa Catarina</option>
-                    <option value="SP">São Paulo</option>
-                    <option value="SE">Sergipe</option>
-                    <option value="TO">Tocantins</option>
-                </select>
-            </p>
-
-        </fieldset>
-
-        <button type="submit" name="enviar" class="btn">Enviar</button>
-        <button type="reset" name="limpar" class="btn">Limpar</button>
-    </form>
-    <script src="script.js"></script>
+ 
+<body class="bg-success text-light"> <!-- Define o fundo da página como escuro e o texto como claro -->
+    <div class="container mt-5"> <!-- Cria um contêiner com margem superior de 5 -->
+        <h2 class="text-center">Busca de Endereço por CEP</h2> <!-- Título da página centralizado -->
+        <div class="text-center"> <!-- Cria um bloco de conteúdo centralizado -->
+            <img class="img-fluid" src="img/cep.jfif" alt="cep"> <!-- Exibe uma imagem responsiva de exemplo de CEP -->
+        </div>
+ 
+        <form> <!-- Início do formulário -->
+            <!-- Identificação do Usuário -->
+            <fieldset class="border p-4 mt-4"> <!-- Cria um campo de identificação com borda e padding -->
+                <legend class="w-auto">Identificação do usuário</legend> <!-- Título do campo -->
+                <div class="mb-3 row"> <!-- Cria uma linha para o campo de nome -->
+                    <label for="cnome" class="col-sm-2 col-form-label">Nome:</label> <!-- Label para o campo Nome -->
+                    <div class="col-sm-10"> <!-- Cria uma divisão para o campo de entrada -->
+                        <input type="text" name="nome" id="cnome" class="form-control" size="30" maxlength="50"
+                            required autofocus>
+                        <!-- Campo de texto para o nome, obrigatório e com foco automático -->
+                    </div>
+                </div>
+                <div class="mb-3 row"> <!-- Cria uma linha para o campo de telefone -->
+                   
+                    <label for="cemail" class="col-sm-2 col-form-label">E-mail:</label>
+                    <!-- Label para o campo E-mail -->
+                    <div class="col-sm-3">
+                        <input type="email" name="email" id="cemail" class="form-control" size="30" maxlength="50"
+                            required> <!-- Campo para e-mail, obrigatório -->
+                    </div>
+                    <label for="cphone" class="col-sm-2 col-form-label">Telefone:</label>
+                    <!-- Label para o campo Telefone -->
+                    <div class="col-sm-5">
+                        <input type="tel" name="telefone" id="cphone" class="form-control" size="15" maxlength="15"
+                            required oninput="mascaraTelefone(this)">
+                        <!-- Campo para telefone, com máscara aplicada via JavaScript -->
+                    </div>
+                </div>
+                <div class="mb-3 row"> <!-- Cria uma linha para o campo de CPF -->
+                   
+                    <label for="cnasc" class="col-sm-2 col-form-label">Data de nascimento:</label>
+                    <!-- Label para o campo Data de nascimento -->
+                    <div class="col-sm-3">
+                        <input type="date" name="nasc" id="cnasc" class="form-control">
+                        <!-- Campo para data de nascimento -->
+                    </div>
+                    <label for="cpf" class="col-sm-2 col-form-label">CPF:</label> <!-- Label para o campo CPF -->
+                    <div class="col-sm-5">
+                        <input type="text" id="cpf" name="cpf" class="form-control" maxlength="14"
+                            required oninput="validarCPF(this)">
+                        <!-- Campo para CPF, com validação via JavaScript -->
+                    </div>
+                </div>
+            </fieldset>
+ 
+            <!-- Endereço do Usuário -->
+            <fieldset class="border p-4 mt-4"> <!-- Cria uma seção para o endereço com borda e padding -->
+                <legend class="w-auto">Endereço do usuário</legend> <!-- Título do campo -->
+                <div class="mb-3 row"> <!-- Cria uma linha para o campo de CEP -->
+                    <label for="cep" class="col-sm-2 col-form-label">CEP:</label> <!-- Label para o campo CEP -->
+                    <div class="col-sm-3">
+                        <input type="text" id="cep" class="form-control" maxlength="9" onblur="buscarEndereco()">
+                        <!-- Campo para CEP, com função JavaScript para buscar o endereço ao perder o foco -->
+                    </div>
+                    <label for="logradouro" class="col-sm-2 col-form-label">Logradouro:</label>
+                    <!-- Label para o campo Logradouro -->
+                    <div class="col-sm-5">
+                        <input type="text" id="logradouro" class="form-control"> <!-- Campo para Logradouro -->
+                    </div>
+                </div>
+                <div class="mb-3 row"> <!-- Cria uma linha para o campo de Número -->
+                    <label for="numero" class="col-sm-2 col-form-label">Número:</label>
+                    <!-- Label para o campo Número -->
+                    <div class="col-sm-1">
+                        <input type="text" id="numero" class="form-control"> <!-- Campo para Número -->
+                    </div>
+                    <label for="complemento" class="col-sm-2 col-form-label">Complemento:</label>
+                    <!-- Label para o campo Complemento -->
+                    <div class="col-sm-2">
+                        <input type="text" id="complemento" class="form-control"> <!-- Campo para Complemento -->
+                    </div>
+                    <label for="bairro" class="col-sm-2 col-form-label">Bairro:</label>
+                    <!-- Label para o campo Bairro -->
+                    <div class="col-sm-3">
+                        <input type="text" id="bairro" class="form-control"> <!-- Campo para Bairro -->
+                    </div>
+                </div>
+                <div class="mb-3 row"> <!-- Cria uma linha para o campo de Cidade -->
+                    <label for="cidade" class="col-sm-2 col-form-label">Cidade:</label>
+                    <!-- Label para o campo Cidade -->
+                    <div class="col-sm-5">
+                        <input type="text" id="cidade" class="form-control"> <!-- Campo para Cidade -->
+                    </div>
+                    <label for="uf" class="col-sm-2 col-form-label">UF:</label> <!-- Label para o campo UF -->
+                    <div class="col-sm-3">
+                        <select id="uf" name="uf" class="form-control" required>
+                            <!-- Campo de seleção para UF, obrigatório -->
+                            <option value="">Selecione...</option> <!-- Opção padrão para selecionar o estado -->
+                            <!-- Lista de opções para os estados do Brasil -->
+                            <option value="AC">AC</option>
+                            <option value="AL">AL</option>
+                            <option value="AP">AP</option>
+                            <option value="AM">AM</option>
+                            <option value="BA">BA</option>
+                            <option value="CE">CE</option>
+                            <option value="DF">DF</option>
+                            <option value="ES">ES</option>
+                            <option value="GO">GO</option>
+                            <option value="MA">MA</option>
+                            <option value="MT">MT</option>
+                            <option value="MS">MS</option>
+                            <option value="MG">MG</option>
+                            <option value="PA">PA</option>
+                            <option value="PB">PB</option>
+                            <option value="PR">PR</option>
+                            <option value="PE">PE</option>
+                            <option value="PI">PI</option>
+                            <option value="RJ">RJ</option>
+                            <option value="RN">RN</option>
+                            <option value="RS">RS</option>
+                            <option value="RO">RO</option>
+                            <option value="RR">RR</option>
+                            <option value="SC">SC</option>
+                            <option value="SP">SP</option>
+                            <option value="SE">SE</option>
+                            <option value="TO">TO</option>
+                        </select> <!-- Lista de estados -->
+                    </div>
+                </div>
+            </fieldset>
+ 
+            <div class="mt-4 text-center"> <!-- Seção para os botões no final do formulário -->
+                <button type="submit" name="enviar" class="btn btn-primary">Enviar</button> <!-- Botão de envio -->
+                <button type="reset" name="limpar" class="btn btn-secondary">Limpar</button> <!-- Botão de reset -->
+            </div>
+        </form>
+    </div>
+ 
+    <!-- Bootstrap 5 JS (opcional) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <!-- Link para o Popper.js, necessário para alguns componentes do Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <!-- Link para o JavaScript do Bootstrap -->
+    <script src="script.js"></script> <!-- Link para um arquivo JavaScript externo -->
 </body>
-
+ 
 </html>
+
+
+
